--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -6,8 +6,8 @@ tasks:
   install:
     desc: "Install dependencies"
     cmds:
-      - pip install -r requirements.txt
-      - pip install uvicorn
+      - pip3 install -r requirements.txt
+      - pip3 install uvicorn
 
   build:
     desc: "Build the application binary"
